# Kruskal

./: CMakeLists.txt  LICENSE
inc/: graph_matrix.c  graph_matrix.h  linkedlist.c  linkedlist.h
src/: Kruskal.c
